# RusToDo

./: Cargo.toml  README.md  todos.db
src/: cli.rs  main.rs  todo.rs  todo_list.rs
