[package]
name = "rtd"
version = "0.1.0"
edition = "2021"
description = "TodoList CLI Application"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
iana-time-zone = "0.1"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
anyhow = "1.0"
